Review adjustments
Signed-off-by: Mark Herwege <mark.herwege@telenet.be>