@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.nikohomecontrol.internal;
 
-import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -55,24 +54,17 @@ public class NikoHomeControlBindingConstants {
             "accessRingAndComeIn");
 
     // thing type sets
-    public static final Set<ThingTypeUID> BRIDGE_THING_TYPES_UIDS = Collections
-            .unmodifiableSet(Stream.of(BRIDGEI_THING_TYPE, BRIDGEII_THING_TYPE).collect(Collectors.toSet()));
-    public static final Set<ThingTypeUID> ACTION_THING_TYPES_UIDS = Collections.unmodifiableSet(
-            Stream.of(THING_TYPE_PUSHBUTTON, THING_TYPE_ON_OFF_LIGHT, THING_TYPE_DIMMABLE_LIGHT, THING_TYPE_BLIND)
-                    .collect(Collectors.toSet()));
-    public static final Set<ThingTypeUID> THERMOSTAT_THING_TYPES_UIDS = Collections
-            .unmodifiableSet(Stream.of(THING_TYPE_THERMOSTAT).collect(Collectors.toSet()));
-    public static final Set<ThingTypeUID> METER_THING_TYPES_UIDS = Collections.unmodifiableSet(
-            Stream.of(THING_TYPE_ENERGYMETER_LIVE, THING_TYPE_ENERGYMETER, THING_TYPE_GASMETER, THING_TYPE_WATERMETER)
-                    .collect(Collectors.toSet()));
-    public static final Set<ThingTypeUID> ACCESS_THING_TYPES_UIDS = Collections
-            .unmodifiableSet(Stream.of(THING_TYPE_ACCESS, THING_TYPE_ACCESS_RINGANDCOMEIN).collect(Collectors.toSet()));
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Stream
-            .concat(BRIDGE_THING_TYPES_UIDS.stream(),
-                    Stream.concat(ACTION_THING_TYPES_UIDS.stream(),
-                            Stream.concat(THERMOSTAT_THING_TYPES_UIDS.stream(),
-                                    Stream.concat(METER_THING_TYPES_UIDS.stream(), ACCESS_THING_TYPES_UIDS.stream()))))
-            .collect(Collectors.toSet());
+    public static final Set<ThingTypeUID> BRIDGE_THING_TYPES_UIDS = Set.of(BRIDGEI_THING_TYPE, BRIDGEII_THING_TYPE);
+    public static final Set<ThingTypeUID> ACTION_THING_TYPES_UIDS = Set.of(THING_TYPE_PUSHBUTTON,
+            THING_TYPE_ON_OFF_LIGHT, THING_TYPE_DIMMABLE_LIGHT, THING_TYPE_BLIND);
+    public static final Set<ThingTypeUID> THERMOSTAT_THING_TYPES_UIDS = Set.of(THING_TYPE_THERMOSTAT);
+    public static final Set<ThingTypeUID> METER_THING_TYPES_UIDS = Set.of(THING_TYPE_ENERGYMETER_LIVE,
+            THING_TYPE_ENERGYMETER, THING_TYPE_GASMETER, THING_TYPE_WATERMETER);
+    public static final Set<ThingTypeUID> ACCESS_THING_TYPES_UIDS = Set.of(THING_TYPE_ACCESS,
+            THING_TYPE_ACCESS_RINGANDCOMEIN);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Stream.of(BRIDGE_THING_TYPES_UIDS.stream(),
+            ACTION_THING_TYPES_UIDS.stream(), THERMOSTAT_THING_TYPES_UIDS.stream(), METER_THING_TYPES_UIDS.stream(),
+            ACCESS_THING_TYPES_UIDS.stream()).flatMap(i -> i).collect(Collectors.toSet());
 
     // List of all Channel ids
     public static final String CHANNEL_BUTTON = "button";
